PAE-53 - Appearance - fixed horizontal scroll for gallery component

--- a/src/Modules/Content/Dnn.PersonaBar.Pages/Pages.Web/src/components/Appearance/Card/style.less
+++ b/src/Modules/Content/Dnn.PersonaBar.Pages/Pages.Web/src/components/Appearance/Card/style.less
@@ -7,6 +7,7 @@
 
 :local(.moduleContainer) {
     padding: 15px 15px;
+    display: inline-block;
     
     &.selected {
         padding: 15px 6px;
@@ -109,7 +110,7 @@
         }
     }
 
-    div.title {
+    div.card-title {
         display: block;
         text-align: center;
         font-family: 'pb_semibold';
